added context and display
displays owned and missing mounts no style

--- a/src/components/SearchbarAPI/SearchBarAPI.css
+++ b/src/components/SearchbarAPI/SearchBarAPI.css
@@ -1,6 +1,6 @@
 .character-select {
   width: 100%;
-  min-height: 100vh;
+  max-height: 50vh;
   height: fit-content;
   background-color: blueviolet;
 }
