--- a/src/components/CharacterSelectButton/style.css
+++ b/src/components/CharacterSelectButton/style.css
@@ -7,6 +7,8 @@
   transform: translateX(0%);
   transition-property: transform;
   transition-duration: 500ms;
+  display: flex;
+  flex-direction: column;
 }
 .active {
   transform: translateX(100%);
@@ -16,4 +18,25 @@ button {
   border: none;
   font-size: 32px;
   background-color: transparent;
+  align-self: flex-end;
+}
+
+.openSlider {
+  background-color: #c6c6c6;
+  padding-block: 8px;
+  padding-inline: 12px;
+  border-radius: 50px;
+  margin-inline: 8px;
+  margin-top: 8px;
+  margin-bottom: 25px;
+}
+
+.closeSlider {
+  background-color: #c6c6c6;
+  padding-block: 8px;
+  padding-inline: 12px;
+  border-radius: 50px;
+  margin-inline: 8px;
+  margin-top: 8px;
+  margin-bottom: 25px;
 }
