--- a/src/App.css
+++ b/src/App.css
@@ -3,43 +3,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #3c3c3c;
   min-height: 100vh;
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
+  background-color: #3c3c3c;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (min-width: 1024px) {
+  .App {
+    flex-direction: row-reverse;
+    align-items: start;
+    background-color: #c6c6c6;
   }
 }
