--- a/src/components/CharacterSelectButton/style.css
+++ b/src/components/CharacterSelectButton/style.css
@@ -1,17 +1,34 @@
 .slider {
   height: 100vh;
-  background-color: cadetblue;
+  width: 100vw;
+  background-color: #3c3c3c;
   z-index: 1;
   position: fixed;
   top: 0;
-  transform: translateX(0%);
+  transform: translateX(100%);
   transition-property: transform;
   transition-duration: 500ms;
   display: flex;
   flex-direction: column;
 }
+@media screen and (min-width: 1024px) {
+  .slider {
+    position: static;
+    background-color: inherit;
+    right: 0px;
+    transform: none;
+    max-width: 30vw;
+  }
+  .openSlider,
+  .closeSlider {
+    display: none;
+  }
+  .active {
+    transform: translateX(0);
+  }
+}
 .active {
-  transform: translateX(100%);
+  transform: translateX(0);
 }
 
 button {
