--- a/src/components/Display/style.css
+++ b/src/components/Display/style.css
@@ -3,17 +3,22 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
-  margin: 0 12px;
+  padding: 0 12px;
+  width: 100%;
+  height: inherit;
+  background-color: #3c3c3c;
+  min-height: 100vh;
 }
-@media screen and (min-width: 664px) {
+@media screen and (min-width: 640px) {
   .mount-wrapper {
     gap: 0.5rem;
-    margin: 0px 24px;
+    padding: 0px 24px;
   }
 }
-@media screen and (min-width: 1014px) {
+
+@media screen and (min-width: 1024px) {
   .mount-wrapper {
     gap: 0.25rem;
-    margin: 0px 64px;
+    padding: 40px 64px;
   }
 }
