--- a/src/components/Mount/style.css
+++ b/src/components/Mount/style.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #3c3c3c;
 }
 .mount-container:hover > .tooltip {
   visibility: visible;
