--- a/src/components/SearchbarAPI/SearchBarAPI.css
+++ b/src/components/SearchbarAPI/SearchBarAPI.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-height: 100vh;
   height: fit-content;
-  background-color: blueviolet;
+  background-color: inherit;
 }
 
 .input-wrapper {
