--- a/src/components/CharacterSelectMenu/style.css
+++ b/src/components/CharacterSelectMenu/style.css
@@ -50,9 +50,9 @@ button {
 
 .closeSlider {
   background-color: #c6c6c6;
-  padding-block: 8px;
-  padding-inline: 12px;
-  border-radius: 50px;
+  padding-block: 6px;
+  padding-inline: 15px;
+  border-radius: 100%;
   margin-inline: 8px;
   margin-top: 8px;
   margin-bottom: 25px;
