--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,6 +6,7 @@
   max-width: 100vw;
   overflow: hidden;
   background-color: #3c3c3c;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 @media screen and (min-width: 1024px) {
   .App {
