--- a/src/components/Mount/style.css
+++ b/src/components/Mount/style.css
@@ -3,8 +3,8 @@
   border: solid;
   position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: column;
+  align-items: center; */
   background-color: #3c3c3c;
 }
 .mount-container:hover > .tooltip {
