--- a/src/components/Panel/style.css
+++ b/src/components/Panel/style.css
@@ -13,6 +13,7 @@
   gap: 3rem;
   align-items: flex-start;
   overflow-y: scroll;
+  overflow-x: hidden;
   padding: 1rem 1rem;
   z-index: 100;
 }
@@ -24,7 +25,7 @@
   justify-content: space-between;
 }
 .name {
-  font-size: 2rem;
+  font-size: clamp(1rem, 0.2473rem + 4.3011vw, 3rem);
 }
 .description {
   max-width: 40ch;
@@ -41,6 +42,8 @@
 }
 .panel img {
   align-self: center;
+  max-width: 100%;
+  object-fit: contain;
 }
 @media screen and (min-width: 664px) {
   .panel {
@@ -53,5 +56,8 @@
     top: 0;
     bottom: 0;
     max-width: 30vw;
+  }
+  .name {
+    font-size: clamp(2rem, 0.8571rem + 1.7857vw, 3rem);
   }
 }
