overflow hidden on bödy

--- a/src/components/Character/style.css
+++ b/src/components/Character/style.css
@@ -1,23 +1,19 @@
 .character-item {
   width: 100%;
-  background-color: darkslategray;
+  background-color: #c6c6c6;
   display: flex;
-  gap: 15px;
-  border-radius: 50px;
-}
-.character-item > img {
-  border-radius: 50px;
+  border: solid #3c3c3c;
+  cursor: pointer;
 }
 .text-container {
-  margin-top: 10px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.2em;
+  margin-left: 1em;
   width: 100%;
+  padding: 0.25em 0.5em;
 }
 .text-container > h3 {
-  font-size: 28px;
-}
-.text-container > p {
-  position: absolute;
-  bottom: 0;
-  opacity: 50%;
+  font-size: 1.5rem;
 }
