--- a/src/components/Display/style.css
+++ b/src/components/Display/style.css
@@ -8,10 +8,12 @@
   height: inherit;
   background-color: #3c3c3c;
   min-height: 100vh;
+  overflow: hidden;
 }
 .active {
   display: none;
 }
+
 @media screen and (min-width: 640px) {
   .mount-wrapper {
     gap: 0.5rem;
