started on user guide

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
   min-height: 100vh;
   max-width: 100vw;
   background-color: #3c3c3c;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.active {
+  display: none;
 }
 @media screen and (min-width: 1024px) {
   .App {
