--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,15 @@
 .active {
   display: none;
 }
+.user-guide-card {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 80%;
+  gap: 1rem;
+  font-size: 20px;
+  color: #c4c4c4;
+}
 @media screen and (min-width: 1024px) {
   .App {
     flex-direction: row-reverse;
