--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   max-width: 100vw;
   background-color: #3c3c3c;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  position: relative;
 }
 .active {
   display: none;
@@ -14,15 +15,25 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  align-items: center;
   width: 80%;
   gap: 1rem;
   font-size: 20px;
   color: #c4c4c4;
+}
+.user-guide-card > p {
+  width: 90%;
 }
 @media screen and (min-width: 1024px) {
   .App {
     flex-direction: row-reverse;
     align-items: start;
     background-color: #c6c6c6;
+  }
+  .user-guide-card {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 70%;
   }
 }
